# excel-mcp-server

./: README.md  TOOLS.md  pyproject.toml  requirements.txt
docs/: index.html
excel_mcp/: __init__.py  __main__.py  sheet.py
python/httpx-0.28.1.dist-info/: RECORD
python/jsonschema-4.24.0.dist-info/: RECORD
python/markdown_it_py-3.0.0.dist-info/: RECORD
python/mcp-1.11.0.dist-info/: RECORD
python/pygments-2.19.2.dist-info/: RECORD
python/python_dotenv-1.1.1.dist-info/: RECORD
python/rpds_py-0.26.0.dist-info/: RECORD
python/sse_starlette-2.4.1.dist-info/: RECORD
python/typer-0.16.0.dist-info/: RECORD
python/uvicorn-0.35.0.dist-info/: RECORD
src/excel_mcp/: __main__.py  data.py  server.py  sheet.py
wheelhouse/: mcp-1.11.0-py3-none-any.whl  pydantic_core-2.33.2-cp313-cp313-win_amd64.whl  rpds_py-0.26.0-cp313-cp313-win_amd64.whl
